force-app/main/default/objects/CPQ_Pricing_Lookup__c/CPQ_Pricing_Lookup__c.object-meta.xml
<CustomObject>
    <description>Contains all pricing data from SAP. It is used to determine product pricing for a specific VAR, Disti, etc.</description>
    <label>CPQ Pricing Lookup</label>
    <nameField>
        <label>CPQ Pricing Lookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Pricing Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>