force-app/main/default/objects/CPQ_Pricing_Lookup__c/fields/Condition_Pricing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Condition_Pricing_Unit__c</fullName>
    <label>Condition Pricing Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>