force-app/main/default/objects/CPQ_Pricing_Lookup__c/fields/Condition_Rate__c.field-meta.xml
<CustomField>
    <fullName>Condition_Rate__c</fullName>
    <label>Condition Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>