force-app/main/default/objects/CPQ_Pricing_Lookup__c/fields/Condition_Record_Number__c.field-meta.xml
<CustomField>
    <fullName>Condition_Record_Number__c</fullName>
    <externalId>true</externalId>
    <label>Condition Record Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>