force-app/main/default/objects/CPQ_Pricing_Lookup__c/fields/Condition_Unit__c.field-meta.xml
<CustomField>
    <fullName>Condition_Unit__c</fullName>
    <label>Condition Unit</label>
    <length>3</length>
    <type>Text</type>
</CustomField>