force-app/main/default/objects/CPQ_Pricing_Lookup__c/fields/CPQ_Price_Identifier__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Price_Identifier__c</fullName>
    <formula>Name + Condition_Type__c + Inactive_To_String__c + Text(Valid_To__c)</formula>
    <label>CPQ Price Identifier</label>
    <type>Text</type>
</CustomField>