force-app/main/default/objects/CPQ_Pricing_Lookup__c/fields/End_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Type__c</fullName>
    <label>End Customer Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>