force-app/main/default/objects/CPQ_Pricing_Lookup__c/fields/Inactive_To_String__c.field-meta.xml
<CustomField>
    <fullName>Inactive_To_String__c</fullName>
    <formula>IF( Inactive__c, &quot;TRUE&quot;, &quot;FALSE&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive To String</label>
    <type>Text</type>
</CustomField>