force-app/main/default/objects/CPQ_Pricing_Lookup__c/fields/Lookup_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Customer_Number__c</fullName>
    <formula>BLANKVALUE( Customer_Number__c, &quot;NONE&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lookup Customer Number</label>
    <type>Text</type>
</CustomField>