force-app/main/default/objects/CPQ_Pricing_Lookup__c/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <label>Price List</label>
    <length>2</length>
    <type>Text</type>
</CustomField>