force-app/main/default/objects/CPQ_Pricing_Lookup__c/fields/Rate_Unit__c.field-meta.xml
<CustomField>
    <fullName>Rate_Unit__c</fullName>
    <label>Rate Unit</label>
    <length>5</length>
    <type>Text</type>
</CustomField>